# epp-eu-klems

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CITATION  README.md  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: documentation.md  enhancement.md  question.md
measuring_intangible_capital/: .gitignore  CITATION  LICENSE  README.md  environment.yml  setup.cfg
measuring_intangible_capital/.github/ISSUE_TEMPLATE/: bug_report.md
measuring_intangible_capital/paper/: task_paper.py
measuring_intangible_capital/src/measuring_intangible_capital/: config.py
measuring_intangible_capital/src/measuring_intangible_capital/analysis/: task_analysis.py
measuring_intangible_capital/src/measuring_intangible_capital/data_management/: __init__.py
measuring_intangible_capital/src/measuring_intangible_capital/data_management/download/: task_eu_klems_download.py
measuring_intangible_capital/src/measuring_intangible_capital/final/: task_final.py
measuring_intangible_capital/tests/analysis/: test_model.py
paper/: measuring_intangible_capital.tex  measuring_intangible_capital_pres.tex  task_paper.py
src/measuring_intangible_capital/: __init__.py  config.py  error_handling_utilities.py  utilities.py
tests/analysis/: mock.py  test_growth_accounting.py  test_intangible_investment.py  test_labour_productivity.py  test_model.py  test_predict.py
tests/data_management/: eu_klems_data_info_fixture.yaml  mock.py  test_clean_data.py  test_clean_eu_klems_data.py  test_clean_gdp_data.py
(+52 files in other folders)
