[metadata]
name = measuring_intangible_capital
description = Replication of "Measuring intangible capital and its contribution to economic growth in Europe"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shtopane/measuring_intangible_capital
author = Krasimira Kirilova
author_email = s6krkiri@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/shtopane/measuring_intangible_capital
    Documentation = https://github.com/shtopane/measuring_intangible_capital
    Github = https://github.com/shtopane/measuring_intangible_capital
    Tracker = https://github.com/shtopane/measuring_intangible_capital/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/measuring_intangible_capital/_version.py
